--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
+    "find-or-create": "latest",
     "http-errors": "~1.6.2",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.1",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "pug-bootstrap": "0.0.15"
   },
   "devDependencies": {
     "chai": "^3.5.0",
