--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha test/routes/*.js"
+    "test": "mocha test/routes/*.js --timeout 10000"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
