--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha test/routes/*.js --timeout 10000"
+    "test": "cross-env NODE_ENV=test mocha test/routes/*.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -29,6 +29,7 @@
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
     "chai-things": "^0.2.0",
+    "cross-env": "^5.2.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.4.2"
   }
