Pre/post hooks and Watching.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,12 @@
 {
     "env": {
-        "node": true,
-        "mocha": true,
-        "es6": true
+        "node": true
     },
-    "plugins": [
-        "json"
-    ], 
     "extends": "eslint:recommended",
+    "parserOptions": {
+        "sourceType": "module"
+    },
     "rules": {
-        "no-unused-vars":"off",
-        "no-console": "off",
         "indent": [
             "error",
             4
@@ -21,7 +17,7 @@
         ],
         "quotes": [
             "error",
-            "double"
+            "single"
         ],
         "semi": [
             "error",
