--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "scripts": {
     "server": "cross-env NODE_ENV=dev PORT=3001 node lib/bin/www",
+    "server:watch": "cross-env NODE_ENV=dev nodemon --exec babel-node bin/www",
     "start": "npm-run-all test build server",
+    "test:watch": "npm run test -- --watch",
     "test": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register test/routes/*.js",
+    "lint": "esw  ./test ./routes ./models/ app.js",
+    "lint:watch": "npm run lint -- --watch",
     "clean": "rimraf ./lib && mkdir lib",
+    "postbuild": "npm run server",
+    "prebuild": "npm-run-all test clean",
     "build": "babel ./ --out-dir lib/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./test --copy-files"
   },
   "dependencies": {
@@ -14,6 +20,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
+    "eslint": "^5.10.0",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "find-or-create": "latest",
@@ -36,8 +43,10 @@
     "chai-http": "^2.0.1",
     "chai-things": "^0.2.0",
     "cross-env": "^5.2.0",
+    "eslint-watch": "^4.0.2",
     "istanbul": "^0.4.5",
     "mocha": "^3.4.2",
+    "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.2"
   }
