--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register test/routes/*.js",
     "lint": "esw  ./test ./routes ./models/ app.js",
     "lint:watch": "npm run lint -- --watch",
+    "coverage": "cross-env NODE_ENV=test PORT=4000 nyc mocha test/routes/*.js",
     "clean": "rimraf ./lib && mkdir lib",
     "postbuild": "npm run server",
     "prebuild": "npm-run-all test clean",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
@@ -48,6 +50,7 @@
     "mocha": "^3.4.2",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
+    "nyc": "^13.1.0",
     "rimraf": "^2.6.2"
   }
 }
