--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "esw  ./test ./routes ./models/ app.js",
     "lint:watch": "npm run lint -- --watch",
     "coverage": "cross-env NODE_ENV=test PORT=4000 nyc mocha test/routes/*.js",
+    "publish-coverage": "nyc report --reporter=text-lcov | coveralls",
     "clean": "rimraf ./lib && mkdir lib",
     "postbuild": "npm run server",
     "prebuild": "npm-run-all test clean",
@@ -19,6 +20,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
+    "coveralls": "^3.0.2",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "eslint": "^5.10.0",
