--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
 after_success:
 - npm run publish-coverage
 branches:
-   only: development
+   only: master
 notifications:
    email:
       recipients:
